--- a/apps/ledger-live-desktop/static/i18n/ja/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ja/app.json
@@ -169,10 +169,7 @@
       "WITHDRAW" : "引き出し済み",
       "REVOKE" : "取り消されました",
       "ACTIVATE" : "有効化されました",
-      "REGISTER" : "登録されました",
-      "STAKE" : "ステーキング済み",
-      "UNSTAKE" : "ステーキング解除済み",
-      "WITHDRAW_UNSTAKED" : "引き出し済み"
+      "REGISTER" : "登録されました"
     }
   },
   "byteSize" : {
@@ -2078,6 +2075,14 @@
           "dismiss" : "後で",
           "stake" : "{{provider}}でステーキング"
         },
+        "ethereum" : {
+          "title" : "ETHを増やしましょう。今すぐステーキング。",
+          "description" : "LidoでEthereumをステーキングして、毎日報酬を獲得しましょう。ロックアップ（凍結）期間なし。最低入金額なし。",
+          "kiln" : {
+            "title" : "HODLだけではいけません。ETHを増やしましょう。",
+            "description" : "32ETH以上をお持ちですか？KilnでETHを安全にステーキングすることで、受動的な報酬を獲得できます。"
+          }
+        },
         "cosmos" : {
           "title" : "ATOMを増やしましょう。Ledgerバリデーターでステーキング。",
           "description" : "信頼できるLedgerバリデーターでATOMをステーキングします。Ledgerの妥協のないセキュリティで保護されるため、お客様のコインがお客様の元から離れることはありません。"
@@ -2138,8 +2143,8 @@
         "ethereumGasPrice" : "ガス価格",
         "ethereumMaxFee" : "最大手数料 ({{unitName}})",
         "ethereumPriorityFee" : "最大優先手数料 ({{unitName}})",
-        "nextBlock" : "次のブロック",
-        "suggested" : "提案済み",
+        "nextBlock" : "次のブロック: {{nextBaseFee}}",
+        "suggestedPriorityFee" : "推奨: {{lowPriorityFee}} - {{highPriorityFee}} {{unitName}}",
         "unitPerByte" : "1バイトあたり{{unit}}",
         "nft" : "NFT",
         "nftQuantity" : "数量"
@@ -3391,155 +3396,6 @@
       }
     }
   },
-  "ethereum" : {
-    "stake" : {
-      "title" : "Ethereumを獲得する",
-      "lido" : {
-        "tag" : "最小数量なし",
-        "description" : "LidoでEthereumをステーキングして、毎日報酬を獲得しましょう。ロックアップ（凍結）期間なし。最小数量なし。"
-      },
-      "kiln" : {
-        "tag" : "32ETHが必要",
-        "description" : "32ETH以上をお持ちですか？KilnでETHを安全にステーキングすることで、毎日報酬を獲得できます。"
-      },
-      "providerTitle" : "{{provider}}で獲得",
-      "providerLink" : "{{provider}}の詳細"
-    }
-  },
-  "near" : {
-    "account" : {
-      "stakedBalance" : "ステーキング済み残高",
-      "stakedBalanceTooltip" : "この量は現在、バリデーターにステーキングされています。",
-      "availableBalance" : "出金可能残高",
-      "availableBalanceTooltip" : "この数量はステーキング解除されており、現在出金可能です。",
-      "pendingBalance" : "保留中残高",
-      "pendingBalanceTooltip" : "この数s量はステーキング解除されており、現在利用可能待ちです。",
-      "storageUsageBalance" : "最低残高",
-      "storageUsageBalanceTooltip" : "この量は保管とトランザクション用に確保されており、アカウントを有効にしておくために維持する必要がある最低残高です。",
-      "subHeader" : {
-        "cardTitle" : "Powered by Figment",
-        "moreInfo" : "詳細はこちら",
-        "drawerTitle" : "Powered by Figment",
-        "title" : "NEARトークンがLedger Liveでご利用可能になりました",
-        "description" : "NEARトークンを管理して、Ledger Liveで保護できるようになりました。",
-        "description2" : "NEARチェーンのネイティブトークンであるNEARトークンは、トランザクション、ステーキングに利用されています。今後さらに多くの機能へ対応予定です。",
-        "website" : "Powered by Figment"
-      }
-    },
-    "operationDetails" : {
-      "extra" : {
-        "stakedAmount" : "ステーキング済み量"
-      }
-    },
-    "stake" : {
-      "emptyState" : {
-        "description" : "資産をステーキングして、NEARの報酬を獲得できます。",
-        "info" : "ステーキングの仕組み",
-        "earnRewards" : "報酬を獲得する"
-      },
-      "table" : {
-        "header" : "ステーキングポジション",
-        "stake" : "追加",
-        "staked" : "ステーキング済み",
-        "pending" : "リリース保留中",
-        "available" : "引き出し可能"
-      },
-      "unstake" : "ステーキングの解除",
-      "withdraw" : "出金",
-      "activeTooltip" : "ステーキングされた量は報酬を生みます",
-      "inactiveTooltip" : "ステーキング解除された量は報酬を生みません",
-      "commission" : "コミッション",
-      "totalStake" : "合計ステーキング量",
-      "minSafeWarning" : "資金不足",
-      "flow" : {
-        "title" : "ステーキング",
-        "steps" : {
-          "starter" : {
-            "description" : "NEAR資産をバリデーターにステーキングすることで報酬が得られます。",
-            "bullet" : ["ステーキングされた資産の所有権はお客様が保持します", "Ledgerデバイスを使用してステーキング", "資産はステーキング解除後52～65時間で利用可能になります"],
-            "warning" : {
-              "description" : "バリデーターを賢く選択：バリデーターが適切に動作しない場合、ステーキングされた資産の一部が失われて、取り返せない可能性があります。"
-            }
-          },
-          "amount" : {
-            "title" : "数量"
-          },
-          "validator" : {
-            "title" : "バリデーター",
-            "ledgerByFigmentTC" : "Ledger by Figment T&Cs"
-          },
-          "connectDevice" : {
-            "title" : "デバイス"
-          },
-          "confirmation" : {
-            "title" : "確認",
-            "success" : {
-              "title" : "資産が正常にステーキングされました",
-              "text" : "ブロックチェーンがトランザクションを承認後、アカウントの残高が更新されます。",
-              "cta" : "詳細を表示"
-            },
-            "broadcastError" : "トランザクションが失敗した可能性があります。しばらく待ってから、取引履歴を確認した上でもう一度やり直してください。"
-          }
-        }
-      }
-    },
-    "unstake" : {
-      "disabledTooltip" : "ステーキングを解除するのに十分なステーキング済みの資産がありません",
-      "flow" : {
-        "title" : "ステーキングの解除",
-        "steps" : {
-          "amount" : {
-            "title" : "数量",
-            "subtitle" : "ステーキングの解除プロセスは、完了するまでに <0>52〜65時間</0>かかります。",
-            "warning" : "報酬はすぐにキャッシュインされます。ステーキング解除された資産は、<0>52〜65時間のタイムロック</0>後に引き出し可能となります。",
-            "fields" : {
-              "validator" : "バリデーター",
-              "amount" : "ステーキングを解除する数量"
-            }
-          },
-          "connectDevice" : {
-            "title" : "デバイス"
-          },
-          "confirmation" : {
-            "title" : "確認",
-            "success" : {
-              "title" : "資産のステーキングを正常に解除しました",
-              "description" : "<0>{{amount}}</0>は<0>{{validator}}</0>からステーキング解除されました。",
-              "cta" : "詳細を表示"
-            },
-            "broadcastError" : "トランザクションが失敗した可能性があります。しばらく待ってから、取引履歴を確認した上でもう一度やり直してください。"
-          }
-        }
-      }
-    },
-    "withdraw" : {
-      "disabledTooltip" : "引き出しに十分な資産がありません",
-      "flow" : {
-        "title" : "出金",
-        "steps" : {
-          "amount" : {
-            "title" : "数量",
-            "fields" : {
-              "validator" : "バリデーター",
-              "amount" : "引き出す数量"
-            }
-          },
-          "connectDevice" : {
-            "title" : "デバイス"
-          },
-          "confirmation" : {
-            "title" : "確認",
-            "success" : {
-              "title" : "資産の引き出しに成功しました。",
-              "description" : "<0>{{amount}}</0>は<0>{{validator}}</0>から引き出されました",
-              "cta" : "詳細を表示"
-            },
-            "broadcastError" : "トランザクションが失敗した可能性があります。しばらく待ってから、取引履歴を確認した上でもう一度やり直してください。"
-          }
-        }
-      }
-    }
-  },
   "delegation" : {
     "title" : "報酬を獲得する",
     "header" : "デリゲート",
@@ -3749,6 +3605,10 @@
     "experimental" : {
       "disclaimer" : "テクノロジーファンのコミュニティ向けに提供される試験的な機能です。これらの機能は随時変更、破損、または削除される可能性があります。このオプションを有効にすると、あなたは自己責任でこれらの機能を使用することに同意したことになります。",
       "features" : {
+        "apiTrongridProxy" : {
+          "title" : "TronGrid.ioを使用",
+          "description" : "LedgerプロキシなしでTronGridを直接を使用する"
+        },
         "experimentalCurrencies" : {
           "title" : "試験的統合",
           "description" : "利用可能な試験的暗号資産の統合を使用する。"
@@ -4652,9 +4512,6 @@
       "claimRewardCompound" : "報酬を受け取るバリデーター",
       "optIn" : "受取先",
       "nominate" : "バリデーター",
-      "stake" : "バリデーター",
-      "unstake" : "バリデーター",
-      "withdraw" : "バリデーター",
       "erc721" : {
         "transfer" : "受取先"
       },
@@ -5004,10 +4861,6 @@
     "NotEnoughGas" : {
       "title" : "親アカウントで、ネットワーク手数料用の残高が不足しています"
     },
-    "OperatingSystemOutdated" : {
-      "title" : "お使いのオペレーティングシステムのバージョンが古くなっています",
-      "description" : "オペレーティングシステムをアップグレードして、再試行してください。以下の記事を参照すると、Ledger Liveが現在のオペレーティングシステムのバージョンでサポートされていない理由がわかります。"
-    },
     "PasswordsDontMatch" : {
       "title" : "パスワードが一致しません。",
       "description" : "もう一度お試しください。"
@@ -5264,7 +5117,7 @@
       "description" : "トランザクションは、30秒以内に署名する必要があります。もう一度お試しください。"
     },
     "TronNotEnoughEnergy" : {
-      "title" : "エネルギーが必要額を満たしていません。手数料には最大20TRXが必要となります。"
+      "title" : "このトークンの送金に必要なエネルギーが不足しています。"
     },
     "PairingFailed" : {
       "title" : "ペアリングに失敗しました",
@@ -5415,9 +5268,6 @@
     "StellarSourceHasMultiSign" : {
       "title" : "Stellarトランザクションを行うには、マルチシグを無効にしてください"
     },
-    "StellarBurnAddressError" : {
-      "title" : "Stellarアカウントを追加しようとしたときに問題が発生しました"
-    },
     "HederaAddAccountError" : {
       "title" : "アカウントが追加されていません。もう一度お試しください。"
     },
@@ -5464,30 +5314,6 @@
     "ImageLoadRefusedOnDevice" : {
       "title" : "デバイスで画像の読み込みが拒否されました",
       "description" : "この画像が正しくない場合は、別の画像で再度お試しいただけます。"
-    },
-    "NearNewAccountWarning" : {
-      "title" : "受取人アカウントはまだ作成されていません。このプロトコルでは、作成するのに{{formattedNewAccountStorageCost}}の転送コストが必要です。"
-    },
-    "NearNewNamedAccountError" : {
-      "title" : "受取人アカウントはまだ作成されていません。NEARウォレットで作成する必要があります。"
-    },
-    "NearActivationFeeNotCovered" : {
-      "title" : "この量は、{{formattedNewAccountStorageCost}}の保管コストをカバーしていません。"
-    },
-    "NearUseAllAmountStakeWarning" : {
-      "title" : "今後のトランザクション手数料に十分な残高を、確保しておいてください。"
-    },
-    "NearNotEnoughStaked" : {
-      "title" : "ステーキング済み残高が不十分です"
-    },
-    "NearNotEnoughAvailable" : {
-      "title" : "引き出し可能残高が不十分です"
-    },
-    "NearRecommendUnstake" : {
-      "title" : "アカウントを空にする前に、資金のステーキングを解除して引き出してください"
-    },
-    "NearStakingThresholdNotMet" : {
-      "title" : "{{threshold}}以上の数量が必要です。"
     },
     "LockedDeviceError" : {
       "title" : "デバイスがロックされています。",
