--- a/apps/ledger-live-desktop/static/i18n/zh/app.json
+++ b/apps/ledger-live-desktop/static/i18n/zh/app.json
@@ -102,6 +102,7 @@
     "addressCopied" : "地址已复制",
     "addressCopiedSuspicious" : "复制的地址和剪贴板中的地址不匹配。",
     "experimentalFeature" : "实验性功能",
+    "featureFlags" : "功能标志",
     "information" : "信息",
     "search" : "搜索中...",
     "searchWithoutEllipsis" : "搜索",
@@ -131,7 +132,7 @@
     "nanoS" : "Nano S",
     "nanoSP" : "Nano S Plus",
     "nanoX" : "Nano X",
-    "nanoFTS" : "Nano FTS",
+    "stax" : "Stax",
     "blue" : "Blue"
   },
   "operation" : {
@@ -251,6 +252,8 @@
         "float" : "浮动",
         "update" : "费用更新：",
         "loading" : "正在加载……",
+        "loadingQuotes" : "正在加载报价",
+        "loadingDescription" : "只需片刻即可为您找到最佳选项。",
         "name" : {
           "title" : "提供方",
           "tooltip" : "您必须创建账户完成注册，具体取决于提供商。"
@@ -1206,8 +1209,11 @@
         "checkDeviceButton" : "再次运行检查",
         "cancelButton" : "以后再说"
       },
-      "genuineCheckAnimationModal" : {
-        "message" : "在 {{deviceName}} 上允许使用管理器"
+      "softwareCheckAllowSecureChannelModal" : {
+        "title" : "在 {{deviceName}} 上允许使用管理器"
+      },
+      "softwareCheckLockedDeviceModal" : {
+        "title" : "解锁您的设备"
       },
       "helpDrawer" : {
         "title" : "需要安装手册方面的一些帮助？",
@@ -1231,16 +1237,16 @@
   },
   "postOnboarding" : {
     "postOnboardingScreen" : {
-      "title" : "不错。\n一切准备就绪。",
-      "description" : "您的 {{deviceName}} 设置完毕！",
-      "paragraph" : "我们为您准备了一些开始使用的步骤。如果您想自己探索 Ledger Live，请跳过此步骤，您可以随时返回。",
-      "bottomText" : "使用 Ledger Live 安全享受 Web3 之旅。"
+      "title" : "接下来，使用您的\nLedger Stax…… ",
+      "titleCompleted" : "\n到此结束！"
     },
     "postOnboardingContent" : {
-      "title" : "不错。\n一切准备就绪。",
-      "description" : "以下是您接下来可以执行的操作：",
-      "skipLink" : "跳到应用程序",
-      "skipLinkInDrawer" : "我以后再下载"
+      "skipLink" : "我以后再下载"
+    },
+    "postOnboardingBanner" : {
+      "title" : "使用 Ledger Stax 的下一步操作是什么？",
+      "description" : "领取 Infinity NFT，定制其锁屏界面，或将您的资产从其他交易所转出。",
+      "link" : "查看后续步骤"
     }
   },
   "hideNftCollection" : {
@@ -1678,6 +1684,8 @@
       "undelegated" : "已解除委托",
       "undelegatedFrom" : "已解除对后者的委托",
       "undelegatedAmount" : "已解除委托的数额",
+      "withdrawnFrom" : "已提取自",
+      "withdrawnAmount" : "已提取数额",
       "rewardFrom" : "奖励来自",
       "memo" : "Memo",
       "assetId" : "资产 ID",
@@ -1718,7 +1726,7 @@
     "swap" : {
       "notice" : {
         "default" : "发送之前请在您的设备上验证互换详情。地址会被安全地交换因此您不必对其进行验证。",
-        "cic" : "在发送之前，请先在您的设备上核实互换详情。CIC 可能需要对某些交易进行额外的验证，从而导致延迟。"
+        "provider" : "发送资金之前，请先在您的设备上核实互换详情。{{providerName}} 可能需要对某些交易进行额外验证，因此导致延迟。"
       },
       "confirm" : "确认互换交易",
       "amountSent" : "发送数额",
@@ -2231,6 +2239,187 @@
     "value" : "价值",
     "header" : "账户配置 ({{count}})"
   },
+  "elrond" : {
+    "summary" : {
+      "availableBalanceTooltip" : "此数额可以转移。",
+      "availableBalance" : "可用余额",
+      "delegatedAssetsTooltip" : "权益质押服务提供商间接使用委托资产，通过参与共识机制来运行验证者节点、处理交易和保护网络。",
+      "delegatedAssets" : "已委托资产",
+      "undelegatingTooltip" : "取消委托的资产需在 10 天解绑期结束后才能提取。",
+      "undelegating" : "待处理的提取"
+    },
+    "account" : {
+      "subHeader" : {
+        "cardTitle" : "由 MultiversX 提供支持",
+        "moreInfo" : "更多信息",
+        "drawerTitle" : "MultiversX 集成",
+        "title" : "Ledger Live 现已支持 MultiversX eGold (EGLD) 代币",
+        "description" : "您现在可以安全地保护您的 eGold (EGLD) 代币，并通过 Ledger Live 管理它们。",
+        "description2" : "MultiversX eGold (EGLD) 代币是 MultiversX 网络的原生代币，将用于交易、权益质押、智能合约、治理和验证者奖励等所有用途。",
+        "description3" : "我们正在与 MultiversX 团队积极合作，努力添加更多功能，例如权益质押、原生 ESDT（Elrond 标准数字代币）支持等。",
+        "website" : "互联网规模的区块链"
+      }
+    },
+    "delegation" : {
+      "emptyState" : {
+        "description" : "委托您的 EGLD 资产，保护网络并领取您的奖励份额。",
+        "info" : "什么是委托？",
+        "delegation" : "赚取奖励"
+      },
+      "commission" : "佣金",
+      "claimRewards" : "申领奖励",
+      "header" : "委托",
+      "noRewards" : "没有奖励可用",
+      "delegate" : "委托",
+      "undelegate" : "解除委托",
+      "redelegateDisabledTooltip" : "您可以再次重新委托 <0>{{days}}</0>",
+      "redelegateMaxDisabledTooltip" : "每次重新委托的验证者不能多于 <0>7</0> 个",
+      "undelegateDisabledTooltip" : "每次取消委托的验证者不能多于 <0>7</0> 个",
+      "reward" : "申领奖励",
+      "currentDelegation" : "已委托：<0>{{amount}}</0>",
+      "apr" : "年化利率",
+      "totalStake" : "质押总额",
+      "activeTooltip" : "已委托的数额会生成奖励",
+      "inactiveTooltip" : "已解除委托的数额不会生成奖励。",
+      "minSafeWarning" : "资金不足。您需要至少有 1 EGLD 可用。",
+      "flow" : {
+        "title" : "委托",
+        "steps" : {
+          "amount" : {
+            "title" : "委托",
+            "subtitle" : "将您的资产权益质押给以下任一权益质押服务提供商。",
+            "warning" : "明智选择权益质押服务提供商：目前您面临的唯一风险是由于各种原因无法获得奖励，因此您应该根据可靠程度、沟通和经济因素选择提供商。",
+            "fields" : {
+              "validator" : "权益质押服务提供商"
+            }
+          },
+          "fields" : {
+            "amount" : "要权益质押的数额"
+          },
+          "starter" : {
+            "description" : "您可以通过将 EGLD 资产委托给权益质押服务提供商来赚取奖励。",
+            "bullet" : ["您保有对已委托资产的所有权", "使用您的 Ledger 设备进行委托", "资产将在取消委托 10 天后可用"],
+            "warning" : {
+              "description" : "明智选择权益质押服务提供商：目前您面临的唯一风险是由于各种原因无法获得奖励，因此您应该根据可靠程度、沟通和经济因素选择提供商。"
+            }
+          },
+          "validator" : {
+            "title" : "权益质押服务提供商"
+          },
+          "connectDevice" : {
+            "title" : "设备"
+          },
+          "confirmation" : {
+            "title" : "确认",
+            "success" : {
+              "title" : "您已成功委托资产。",
+              "text" : "该交易一经区块链确认，就会更新您的账户余额。",
+              "cta" : "查看详情"
+            },
+            "broadcastError" : "您的交易可能已失败。请稍候片刻并在重试之前查看交易记录。"
+          }
+        }
+      }
+    },
+    "claimRewards" : {
+      "flow" : {
+        "title" : "申领奖励",
+        "steps" : {
+          "claimRewards" : {
+            "title" : "奖励",
+            "compound" : "以复利计算奖励",
+            "claim" : "申领奖励",
+            "compoundOrClaim" : "以复利计算奖励或申领奖励",
+            "compoundDescription" : "奖励将添加至已委托数额。",
+            "claimDescription" : "奖励将添加至您的可用余额。",
+            "compoundInfo" : "您已赚取 <0>{{amount}}</0>。点击“继续”，即可立即申领并自动委托给同一个权益质押服务提供商。",
+            "claimInfo" : "您已从以下权益质押服务提供商赚取 <0>{{amount}}</0>。点击“继续”，即可立即申领并自动添加至可用余额。",
+            "selectLabel" : "选择委托"
+          },
+          "connectDevice" : {
+            "title" : "设备"
+          },
+          "confirmation" : {
+            "title" : "确认",
+            "label" : "确认",
+            "success" : {
+              "title" : "申领奖励成功",
+              "titleCompound" : "奖励已成功复利",
+              "text" : "奖励已添加至您的可用余额",
+              "textCompound" : "您将 <0>{{amount}}</0> EGLD 委托给 <0>{{validator}}</0> 的复利奖励交易已成功处理。",
+              "cta" : "查看详情"
+            },
+            "pending" : {
+              "title" : "正在播送交易……"
+            },
+            "broadcastError" : "您的交易可能已失败。请稍候片刻并在重试之前查看交易记录。"
+          }
+        }
+      }
+    },
+    "undelegation" : {
+      "header" : "解除委托",
+      "headerTooltip" : "10 天解绑期结束后可用。",
+      "inactiveTooltip" : "已解除委托的数额不会生成奖励。",
+      "withdraw" : {
+        "cta" : "完成提取"
+      },
+      "flow" : {
+        "title" : "解除资产委托",
+        "steps" : {
+          "amount" : {
+            "title" : "数额",
+            "subtitle" : "取消委托过程需要 <0>10 天</0>才能完成。",
+            "warning" : "奖励将自动申领。取消委托需要 2 步：请求取消委托，然后等待 <0>10 天解绑期</0>结束后，您便可以完成提取，取消委托的数额将转入您的可用余额。",
+            "fields" : {
+              "validator" : "权益质押服务提供商",
+              "amount" : "要解除委托的数额"
+            }
+          },
+          "device" : {
+            "title" : "设备"
+          },
+          "confirmation" : {
+            "title" : "确认",
+            "success" : {
+              "title" : "您的资产已成功解除委托",
+              "description" : "<0>{{amount}}</0> 已从 <0>{{validator}}</0> 取消委托。",
+              "cta" : "查看详情"
+            },
+            "broadcastError" : "您的交易可能已失败。请稍候片刻并在重试之前查看交易记录。"
+          }
+        }
+      }
+    },
+    "withdraw" : {
+      "flow" : {
+        "title" : "完成提取",
+        "steps" : {
+          "withdraw" : {
+            "title" : "完成提取",
+            "description" : "您从 <0>{{validator}}</0> 取消委托了 <0>{{amount}}</0>。点击“继续”，即可立即提取并自动添加回您的可用余额。",
+            "selectLabel" : "选择取消委托"
+          },
+          "connectDevice" : {
+            "title" : "设备"
+          },
+          "confirmation" : {
+            "title" : "确认",
+            "label" : "确认",
+            "success" : {
+              "title" : "资金提取成功",
+              "text" : "<0>{{amount}}</0> 已提取回您的账户余额。",
+              "cta" : "查看详情"
+            },
+            "pending" : {
+              "title" : "正在播送交易……"
+            },
+            "broadcastError" : "您的交易可能已失败。请稍候片刻并在重试之前查看交易记录。"
+          }
+        }
+      }
+    }
+  },
   "cardano" : {
     "account" : {
       "stakingRewardsBanner" : {
@@ -2312,6 +2501,15 @@
             }
           }
         }
+      }
+    }
+  },
+  "tezos" : {
+    "objkt" : {
+      "card" : {
+        "title" : "NFT（非同质化代币）收藏",
+        "description" : "您可以在 Ledger Live 中通过 Objkt 直接查看泰索斯 Tezos NFT。",
+        "cta" : "在 Objkt 上查看我的 NFT"
       }
     }
   },
@@ -3689,8 +3887,10 @@
       "debugAppsDesc" : "显示并允许打开调试标记的平台应用程序。",
       "experimentalApps" : "允许实验性应用程序",
       "experimentalAppsDesc" : "显示并允许打开实验性标记的平台应用程序。",
-      "catalogServer" : "设置目录供应方",
-      "catalogServerDesc" : "在多个平台应用源之间切换",
+      "catalogUrl" : "设置目录应用程序提供商",
+      "catalogUrlDesc" : "输入您的自定义目录提供方网址",
+      "catalogRampServer" : "设置买入/卖出服务提供商",
+      "catalogRampServerDesc" : "在多个交易提供商之间切换",
       "enablePlatformDevTools" : "启用平台开发工具",
       "enablePlatformDevToolsDesc" : "启用打开平台应用程序开发工具的窗口",
       "featureFlagsTitle" : "Ledger Live 中使用的已定义功能标志",
@@ -3698,6 +3898,9 @@
       "featureFlagsEdit" : "编辑",
       "featureFlagsRestore" : "重置",
       "featureFlagsOverride" : "覆盖",
+      "featureFlagsRestoreAll" : "重置所有标志值",
+      "showButtonDesc" : "始终在侧边栏中显示功能标志按钮",
+      "buttonTitle" : "已本地覆盖的标志",
       "firebaseProject" : "此版本支持的 Firebase 项目：",
       "addLocalApp" : "添加一个本地应用程序",
       "addLocalAppDesc" : "浏览本地文件并使用本地清单添加本地应用程序",
@@ -3752,6 +3955,10 @@
         "experimentalCurrencies" : {
           "title" : "实验性集成",
           "description" : "使用可用的实验性加密资产集成。"
+        },
+        "experimentalExecutionOnRenderer" : {
+          "title" : "实验性网络",
+          "description" : "借助实验性网络优化您通过 VPN 使用 Ledger Live 的体验。仅在您当前使用的 VPN 导致系统错误时激活此功能。"
         },
         "experimentalLanguages" : {
           "title" : "翻译测试",
@@ -4994,6 +5201,23 @@
       "title" : "抱歉，没有找到账户",
       "description" : "地址计算出错，请重试或联系 Ledger 客服"
     },
+    "ElrondDecimalsLimitReached" : {
+      "title" : "已达到小数位数限制",
+      "description" : "请确保所提供的数额有 18 位小数。"
+    },
+    "ElrondMinDelegatedAmountError" : {
+      "title" : "已委托数额必须至少为 {{formattedAmount}}"
+    },
+    "ElrondMinUndelegatedAmountError" : {
+      "title" : "未委托数额必须至少为 {{formattedAmount}}"
+    },
+    "ElrondDelegationBelowMinimumError" : {
+      "title" : "剩余委托不能少于 {{formattedAmount}}"
+    },
+    "NotEnoughEGLDForFees" : {
+      "title" : "EGLD 数额不足以支付交易费用",
+      "description" : "请向您的账户发送一些 EGLD 以支付交易费用。"
+    },
     "NotEnoughBalance" : {
       "title" : "抱歉，资金不足",
       "description" : "请确保该账户资金充足。"
@@ -5493,6 +5717,14 @@
       "title" : "您的设备已经锁定",
       "description" : "解锁您的设备并重试。",
       "descriptionWithProductName" : "解锁您的 {{ productName }} 并重试。"
+    },
+    "DeviceNotOnboardedError" : {
+      "title" : "您的设备尚未准备好使用",
+      "titleWithProductName" : "{{ productName }} 设备尚未准备就绪",
+      "description" : "您需要先设置您的设备。\n我们将引导您完成设置流程。",
+      "descriptionWithProductName" : "您需要先设置 {{ productName }}。\n我们将引导您完成设置流程。",
+      "goToOnboardingButton" : "设置我的设备",
+      "goToOnboardingButtonWithProductName" : "设置我的 {{ productName }}"
     }
   },
   "cryptoOrg" : {
@@ -5525,7 +5757,7 @@
     }
   },
   "customImage" : {
-    "title" : "自定义图片",
+    "title" : "自定义锁屏界面",
     "steps" : {
       "choose" : {
         "stepLabel" : "选择一张图片",
@@ -5543,22 +5775,19 @@
       "transfer" : {
         "stepLabel" : "转移",
         "uploadAnotherImage" : "上传另一张图片",
-        "allowPreview" : "允许在 {{productName}} 上预览图片",
-        "loadingPicture" : "正在 {{productName}} 上加载图片",
-        "pictureLoaded" : "图片已加载",
+        "allowPreview" : "允许在您的 {{productName}} 上加载锁屏图片",
+        "loadingPicture" : "正在加载……",
         "imageLoaded" : "图片已加载到 {{productName}}",
-        "confirmPicture" : "在 {{productName}} 上确认",
-        "doThisLater" : "以后再说",
-        "timeDisclaimer" : "可能最多需要 30 秒"
+        "confirmPicture" : "很合心意？\n用此设定！",
+        "doThisLater" : "以后再说"
       }
     },
     "postOnboarding" : {
       "title" : "个性化我的设备",
       "description" : "通过自定义屏幕",
-      "actionCompletedPopupLabel" : "设备已个性化",
-      "actionCompletedHubTitle" : "那个屏幕看起来很简洁。"
+      "actionCompletedPopupLabel" : "设备已个性化"
     },
-    "customImageSet" : "自定义图片集",
+    "customImageSet" : "锁屏已设置",
     "finishCTA" : "完成"
   }
 }
