--- a/apps/ledger-live-mobile/src/locales/ar/common.json
+++ b/apps/ledger-live-mobile/src/locales/ar/common.json
@@ -421,6 +421,23 @@
       "title" : "عفوًا، لم يتم العثور على أي حساب",
       "description" : "حدث خطأ ما في حساب العنوان. يرجى إعادة المحاولة مرة أخرى. إذا استمرت المشكلة، يرجى حفظ سجلاتك باستخدام الزر أدناه وتقديمها إلى فريق دعم Ledger."
     },
+    "ElrondDecimalsLimitReached" : {
+      "title" : "تم الوصول إلى الحد الأقصى من الكسور العشرية",
+      "description" : "يُرجى التأكد من أن المبلغ المُقدَّم به 18 كسراً عشرياً."
+    },
+    "ElrondMinDelegatedAmountError" : {
+      "title" : "يجب أن يكون المبلغ المفوض على الأقل {{formattedAmount}}"
+    },
+    "ElrondMinUndelegatedAmountError" : {
+      "title" : "يجب أن يكون المبلغ غير المفوض على الأقل {{formattedAmount}}"
+    },
+    "ElrondDelegationBelowMinimumError" : {
+      "title" : "لا يمكن أن يكون التفويض المتبقي أقل من {{formattedAmount}}"
+    },
+    "NotEnoughEGLDForFees" : {
+      "title" : "لا يوجد ما يكفي من EGLD لدفع رسوم المعاملة",
+      "description" : "يُرجى إرسال بعض EGLD إلى حسابك للدفع مقابل المعاملات."
+    },
     "NotEnoughBalance" : {
       "title" : "عفواً، الأموال المتوفرة غير كافية",
       "description" : "يرجى التأكد من وجود أموال كافية في الحساب."
@@ -459,6 +476,10 @@
     "PasswordsDontMatch" : {
       "title" : "كلمة المرور غير مطابقة",
       "description" : "يرجى إعادة المحاولة."
+    },
+    "PeerRemovedPairing" : {
+      "title" : "يجب أن تقوم بإزالة {{ productName }} من أجهزة البلوتوث بجهازك",
+      "description" : "جهازك {{ productName }} قام بتغيير تكوينه للبلوتوث. قم بإزالته من إعدادات هاتفك، ثم ارجع إلى Ledger Live وحاول الإقران مجدداً."
     },
     "SelectExchangesLoadError" : {
       "title" : "تعذر التحميل",
@@ -639,7 +660,7 @@
       "title" : "يجب عليك تقييد على الأقل {{minimumBondAmount}}."
     },
     "PolkadotBondMinimumAmountWarning" : {
-      "title" : "ينبغي ألا يقل رصيدك المُقيّد عن {{minimumBondBalance}}."
+      "title" : "يجب ألا يقل رصيدك المُقيّد عن {{minimumBondBalance}}."
     },
     "PolkadotMaxUnbonding" : {
       "title" : "لقد تجاوزت الحد المسموح به لإلغاء التقيد"
@@ -831,6 +852,13 @@
       "modalButtonLabelBase" : "تصريح",
       "modalButtonLabelSettingsVariant" : "انتقل إلى الإعدادات",
       "dontPair" : "لا تُقرِن"
+    },
+    "camera" : {
+      "title" : "منح تفويض للكاميرا",
+      "authorizeDescription" : "يُرجى منح تفويض للكاميرا لمسح أكواد QR ضوئياً.",
+      "authorizeButtonTitle" : "تصريح",
+      "goToSettingsDescription" : "يُرجى منح تفويض للكاميرا في الإعدادات لمسح أكواد QR ضوئياً.",
+      "goToSettingsButtonTitle" : "انتقل إلى الإعدادات"
     }
   },
   "fees" : {
@@ -1115,6 +1143,12 @@
     "mostPopular" : "الأكثر شعبية"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "تثبيت نفس التطبيقات كما في {{deviceName}}؟",
+      "titleNoDeviceName" : "تثبيت نفس التطبيقات كما في جهاز Ledger السابق؟",
+      "installCTA" : "تثبيت الآن",
+      "skipCTA" : "سأفعل هذا لاحقاً"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} دقيقة",
       "title" : "{{ productName }} يستخدم تطبيقات لتمكين المعاملات الآمنة على سلسلة الكتل",
@@ -1126,7 +1160,7 @@
       "loading" : "جاري التحميل ...",
       "resolving" : "حل التبعيات",
       "progress" : "تثبيت التطبيقات %{{progress}}",
-      "disclaimer" : "التطبيقات على {{ productName }} تُستخدم للموافقة على المعاملات. يمكنك إضافتها أو حذفها في أي وقت."
+      "disclaimer" : "قم بإضافة أو حذف التطبيقات في أي وقت من Ledger Live."
     }
   },
   "onboarding" : {
@@ -1781,7 +1815,8 @@
           "title" : "جهازك مقفل",
           "subtitle" : "قم بإلغاء قفل {{ productName }} خاصتك وحاول مرة أخرى."
         },
-        "retryCta" : "أعد المحاولة"
+        "retryCta" : "إعادة المحاولة",
+        "openSettingsCta" : "انتقل إلى إعدادات البلوتوث"
       }
     }
   },
@@ -2116,6 +2151,8 @@
       "undelegated" : "غير مفوّض ({{amount}})",
       "undelegatedFrom" : "تم إلغاء التفويض من",
       "undelegatedAmount" : "المبلغ غير المفوض",
+      "withdrawnFrom" : "مسحوب من",
+      "withdrawnAmount" : "المبلغ المسحوب",
       "rewardFrom" : "مكافأة من",
       "rewardAmount" : "المبلغ المحصل",
       "memo" : "ملاحظة",
@@ -2272,12 +2309,6 @@
         "unsupported" : "غير مدعوم",
         "settings" : "إعدادات التطبيقات",
         "includeGeneralSettings" : "استيراد إعدادات سطح المكتب"
-      },
-      "fallback" : {
-        "header" : "استيراد الحساب",
-        "title" : "تمكين الكاميرا",
-        "desc" : "يرجى تمكين الكاميرا في الإعدادات لإجراء المسح الضوئي لأكواد QR.",
-        "buttonTitle" : "انتقل إلى الإعدادات"
       }
     },
     "availableBalance" : "الرصيد المتاح",
@@ -2550,6 +2581,10 @@
       "recommendations" : {
         "title" : "التوصيات",
         "desc" : "أثري تجربتك مع التوصيات المخصصة والعروض الخاصة"
+      },
+      "largeMover" : {
+        "title" : "تحرك كبير في السعر",
+        "desc" : "سيتم إخطارك بوجود تحركات مهمة في سعر BTC وETH"
       },
       "price" : {
         "title" : "تنبيهات الأسعار",
@@ -3622,7 +3657,7 @@
       "title" : "تأكيد عملية المبادلة على الجهاز",
       "alert" : {
         "default" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. يتم تبادل العناوين بشكل آمن حتى لا تضطر إلى التحقق منهم.",
-        "cic" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. CIC قد تحتاج إلى إجراء تحقق إضافي لبعض المعاملات، مما يؤدي إلى تأخير."
+        "provider" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. {{providerName}} قد يحتاج إلى إجراء تحقق إضافي لبعض المعاملات، ما يؤدي إلى تأخير."
       },
       "acceptTerms" : "بتأكيد صحة هذه المعاملة، أنا أقبل\n<0><0>شروط استخدام</0> {{provider}}</0>",
       "notice" : "تحقق من تفاصيل المبادلة على جهازك قبل إرسالها. يتم تبادل العناوين بشكل آمن حتى لا تضطر إلى التحقق منهم."
@@ -4653,6 +4688,207 @@
       }
     }
   },
+  "elrond" : {
+    "info" : {
+      "available" : {
+        "title" : "EGLD مُتاحة",
+        "description" : "هذا المبلغ يُمكن تحويله."
+      },
+      "delegated" : {
+        "title" : "الأصول المُكدَّسة",
+        "description" : "الأصول المُكدَّسة تُستخدم بشكل غير مباشر من قِبل مزود التكديس لتشغيل عُقد المدقق ومعالجة المعاملات وتأمين الشبكة من خلال المشاركة في آلية الإجماع."
+      },
+      "undelegating" : {
+        "title" : "عمليات السحب المُعلَّقة",
+        "description" : "الأصول المُلغى تكديسها تخضع لفترة إلغاء تقييد مدتها 10 أيام قبل التمكّن من سحبها."
+      },
+      "delegationUnavailable" : {
+        "title" : "التفويض غير متوفر",
+        "description" : "لا يتوفر رصيد كافٍ في حسابك لبدء تفويض جديد."
+      }
+    },
+    "delegation" : {
+      "delegationEarn" : "قم بتكديس EGLD خاصتك لتأمين الشبكة واقتنص حصتك من المكافآت.",
+      "info" : "ما هو التكديس وكيف يعمل؟",
+      "claimRewards" : "المطالبة بالمكافآت",
+      "claimAvailableRewards" : "المطالبة بـ {{amount}}",
+      "header" : "تكديسي",
+      "Amount" : "المبلغ",
+      "noRewards" : "لا توجد مكافآت متاحة",
+      "delegate" : "إعادة التكديس",
+      "undelegate" : "إلغاء التكديس",
+      "reward" : "المطالبة بالمكافآت",
+      "commission" : "العمولة",
+      "iDelegate" : "أنا أفوّض",
+      "totalStake" : "إجمالي التكديس",
+      "stepperHeader" : {
+        "starter" : "اكسب المكافآت",
+        "validator" : "تفويض الأصول",
+        "amountSubTitle" : "المبلغ المطلوب تكديسه",
+        "summary" : "الملخص",
+        "verification" : "التحقق",
+        "selectDevice" : "اختر جهاز",
+        "connectDevice" : "توصيل الجهاز",
+        "stepRange" : "خطوة {{currentStep}} من {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "starter" : {
+            "description" : "يمكنك كسب مكافآت عن طريق تكديس أصولك EGLD إلى مزود تكديس.",
+            "steps" : {
+              "0" : "أنت تحتفظ بملكية الأصول المُكدَّسة.",
+              "1" : "الأصول ستكون متاحة بعد 10 أيام من إلغاء التكديس.",
+              "2" : "قم بالتكديس باستخدام جهازك Ledger."
+            },
+            "warning" : {
+              "description" : "اختر مزود التكديس بحكمة: حالياً، الخطر الوحيد هو عدم الحصول على المكافآت لأسباب متعددة، لذا يجب عليك اختيار المزود بناءً على الموثوقية والتواصل والاقتصاد."
+            },
+            "cta" : "متابعة"
+          },
+          "validator" : {
+            "validators" : "مزودي التكديس",
+            "myDelegations" : "تكديسي",
+            "cta" : "متابعة",
+            "apr" : "معدل النسبة السنوي (APR): {{amount}}",
+            "totalAvailable" : "إجمالي المتاح : <0>{{amount}}</0>",
+            "allAssetsUsed" : "جميع الأصول المستخدمة",
+            "noResultsFound" : "لم يتم العثور على مدقق لـ <0>{{search}}</0>",
+            "currentAmount" : "(<0>{{amount}}</0> +)"
+          },
+          "amount" : {
+            "assetsRemaining" : "الأصول المتبقية : <0>{{amount}}</0>",
+            "allAssetsUsed" : "جميع الأصول المستخدمة",
+            "minAmount" : "الحد الأدنى للمبلغ : <0>{{min}}</0>",
+            "incorrectAmount" : "الحد الأقصى للمبلغ : <0>{{max}}</0>",
+            "insufficientDelegation" : "إجمالي مبلغ التكديس خاصتك يجب أن يكون على الأقل 1 {{label}} لكل مزود تكديس.",
+            "wrongUndelegations" : "المبلغ المتبقي من {{label}} المُكدَّس يجب أن يكون إما 0 أو أكثر من 1 {{label}} لكل مزود تكديس.",
+            "cta" : "متابعة"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "لقد قمت بتكديس أصولك بنجاح",
+              "text" : "سيتم تحديث رصيد حسابك بمجرد أن تؤكد الشبكة المعاملة.",
+              "cta" : "رؤية التفاصيل"
+            },
+            "pending" : {
+              "title" : "جاري بث المعاملة..."
+            },
+            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
+          }
+        }
+      },
+      "drawer" : {
+        "status" : "الحالة",
+        "rewards" : "المكافآت",
+        "active" : "نشِط",
+        "inactive" : "غير نشِط",
+        "completionDate" : "تاريخ الإكمال",
+        "redelegatedFrom" : "تمت إعادة التفويض من",
+        "completionDateHit" : "اكتمل"
+      }
+    },
+    "claimRewards" : {
+      "stepperHeader" : {
+        "validator" : "اختر المكافأة التي تريد تحصيلها",
+        "method" : "المطالبة بالمكافآت",
+        "summary" : "الملخص",
+        "selectDevice" : "اختر جهاز",
+        "connectDevice" : "توصيل الجهاز",
+        "stepRange" : "خطوة {{currentStep}} من {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "method" : {
+            "youEarned" : "لقد كسبت",
+            "byDelegationAssetsTo" : "عن طريق تكديس الأصول إلى",
+            "claimRewards" : "المطالبة بالمكافآت",
+            "reDelegateRewards" : "تكديس المكافآت",
+            "claimRewardsInfo" : "ستتم المطالبة بهم الآن وإضافتهم إلى رصيدك المتاح.",
+            "reDelegateRewardsInfo" : "ستتم المطالبة بهم الآن وتفويضها تلقائياً إلى نفس مزود التكديس.",
+            "compoundOrCashIn" : "تكديس المكافآت أو المطالبة بالمكافآت؟",
+            "claimRewardsTooltip" : "ستتم إضافة المكافآت إلى الرصيد المتاح",
+            "reDelegateRewardsTooltip" : "المكافآت ستُضاف إلى المبلغ المُكدَّس",
+            "cta" : "متابعة"
+          },
+          "verification" : {
+            "success" : {
+              "claimRewardsSuccess" : "لقد قمت بالمطالبة بمكافآتك بنجاح. تمت إضافتهم إلى رصيدك المتاح.",
+              "reDelegateRewardsSuccess" : "مكافآتك تم تكديسها إلى نفس مزود التكديس.",
+              "text" : "سيتم تحديث رصيد حسابك عندما تؤكد الشبكة المعاملة.",
+              "cta" : "رؤية التفاصيل"
+            },
+            "pending" : {
+              "title" : "جاري بث المعاملة..."
+            },
+            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
+          }
+        }
+      }
+    },
+    "undelegation" : {
+      "stepperHeader" : {
+        "amountSubTitle" : "المبلغ المطلوب إلغاء تكديسه",
+        "summary" : "الملخص",
+        "selectDevice" : "اختر جهاز",
+        "connectDevice" : "توصيل الجهاز",
+        "stepRange" : "خطوة {{currentStep}} من {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "amount" : {
+            "allAssetsUsed" : "جميع الأصول المختارة",
+            "assetsRemaining" : "الأصول المفوضة المتبقية : <0>{{amount}}</0>",
+            "minAmount" : "الحد الأدنى للمبلغ : <0>{{min}}</0>",
+            "incorrectAmount" : "الحد الأقصى للمبلغ : <0>{{max}}</0>",
+            "minRemaining" : "الحد الأدنى المتبقي : <0>{{min}}</0>"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "لقد ألغيت تكديس أصولك بنجاح",
+              "text" : "سيتم تحديث رصيد حسابك عندما تؤكد الشبكة المعاملة.",
+              "cta" : "رؤية التفاصيل"
+            },
+            "pending" : {
+              "title" : "جاري بث المعاملة..."
+            },
+            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
+          }
+        }
+      }
+    },
+    "withdraw" : {
+      "stepperHeader" : {
+        "validator" : "اختر المكافأة التي تريد تحصيلها",
+        "method" : "المطالبة بالمكافآت",
+        "summary" : "الملخص",
+        "selectDevice" : "اختر جهاز",
+        "connectDevice" : "توصيل الجهاز",
+        "stepRange" : "خطوة {{currentStep}} من {{totalSteps}}"
+      },
+      "flow" : {
+        "steps" : {
+          "method" : {
+            "youEarned" : "لقد ألغيت التكديس",
+            "byDelegationAssetsTo" : "من",
+            "withdrawInfo" : "ستتم المطالبة بهم الآن وإضافتهم إلى رصيدك المتاح.",
+            "withdrawTooltip" : "ستتم إضافة المسحوبات إلى الرصيد المتاح",
+            "cta" : "متابعة"
+          },
+          "verification" : {
+            "success" : {
+              "title" : "لقد قمت بالمطالبة بمكافآتك بنجاح. تمت إضافتهم إلى رصيدك المتاح.",
+              "text" : "سيتم تحديث رصيد حسابك عندما تؤكد الشبكة المعاملة.",
+              "cta" : "رؤية التفاصيل"
+            },
+            "pending" : {
+              "title" : "جاري بث المعاملة..."
+            },
+            "broadcastError" : "ربما تكون معاملتك قد فشلت. يُرجى الانتظار لحظة ثم تحقق من سجل المعاملات قبل المحاولة مرة أخرى."
+          }
+        }
+      }
+    }
+  },
   "tezos" : {
     "AccountHeader" : {
       "title" : "يمكنك أن تكسب مكافآت عن طريق تفويض حسابك",
@@ -5264,7 +5500,8 @@
     "actions" : {
       "redelegate" : "إعادة التفويض",
       "collectRewards" : "تحصيل المكافآت",
-      "undelegate" : "إلغاء التفويض"
+      "undelegate" : "إلغاء التفويض",
+      "withdraw" : "سحب"
     }
   },
   "ValidateOnDevice" : {
